[gd_scene load_steps=9 format=2]

[ext_resource path="res://fight/scramble_button_disabled.png" type="Texture" id=1]
[ext_resource path="res://fight/submit_button.png" type="Texture" id=2]
[ext_resource path="res://fight/submit_button_disabled.png" type="Texture" id=3]
[ext_resource path="res://fight/scramble_button.png" type="Texture" id=4]
[ext_resource path="res://fight/hand_tiles.gd" type="Script" id=5]
[ext_resource path="res://fight/confirm_button.gd" type="Script" id=6]
[ext_resource path="res://fight/played_tiles.gd" type="Script" id=7]
[ext_resource path="res://fight/fight.gd" type="Script" id=8]

[node name="Fight" type="ReferenceRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -320.0
margin_right = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayArea" type="ReferenceRect" parent="Box"]
margin_right = 640.0
margin_bottom = 532.0
size_flags_vertical = 3

[node name="PlayedTiles" type="ReferenceRect" parent="Box/PlayArea"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_bottom = 32.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandTiles" type="ReferenceRect" parent="Box"]
margin_top = 536.0
margin_right = 640.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 64 )
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
script = ExtResource( 5 )

[node name="ScrambleButton" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = 150.0
margin_bottom = -32.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -64.0
margin_bottom = -32.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
disabled = true
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="valid_word_deformed" from="Box/PlayArea/PlayedTiles" to="ConfirmButton" method="_on_PlayedTiles_valid_word_deformed"]
[connection signal="valid_word_formed" from="Box/PlayArea/PlayedTiles" to="ConfirmButton" method="_on_PlayedTiles_valid_word_formed"]
[connection signal="pressed" from="ScrambleButton" to="Box/HandTiles" method="_on_ScrambleButton_pressed"]
[connection signal="pressed" from="ConfirmButton" to="Box/PlayArea/PlayedTiles" method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="ConfirmButton" to="Box/HandTiles" method="_on_ConfirmButton_pressed"]
